2002-05-08  Mikael Hallendal  <micke@codefactory.se>

	* src/Makefile.am (yelp_SOURCES): 
	- added yelp-reader.[ch]

	* src/yelp-uri.[ch]: 
	- removed the YelpReader-stuff from here.

	* src/yelp-reader.[ch]: 
	- starting on this class that will take care of reading any given
	  YelpURI *uri and signalling when there is something to read.

2002-05-07  Christophe Merlet  <christophe@merlet.net>

	* src/Makefile.am: Really add ??!! $(DESTDIR) variable.

2002-05-07  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-section.c:
	(yelp_section_new): check if name == NULL, hopefully fixes #80981.

	* src/yelp-scrollkeeper.c:
	(ys_parse_index_item): reverted my own stupidity.

2002-05-06  Sander Vesik  <sander.vesik@sun.com>

	* stylesheet/yelp-customization.xsl: 
	- initial support for <part>
	- fix informaltable display
	- fix revhistory display
	- fix non-centering of 'Contents' in the footer navbar
	- fix display of copyright holders on title page
	- improvements to the Table of Contents page

2002-05-06  Mikael Hallendal  <micke@codefactory.se>

	* NEWS: fixup

	* configure.in (GNOMELOCALEDIR): updated libgtkhtml2 deps.

	* Release 0.7
	
	* NEWS: updated for 0.7

	* configure.in: bumped version to 0.7

	* src/yelp-scrollkeeper.c:
	- Fixes #80800
	(ys_parse_index): silenced warning.

	* src/yelp-window.c: 
	- use YelpURI.
	(yw_handle_uri): somewhat cleaned up after YelpURI.

	* src/yelp-view-toc.c: 
	- use YelpURI.
	- Changed url_selected signal to uri_selected.
	- Send the links as man:... instead of path:..

	* src/yelp-view-index.c: 
	- use YelpURI.
	- Changed url_selected signal to uri_selected.
	- thinking about removing the html-view from this and only have it
	  as a entry + list for now. Later on we can add full text search
	  or more sofisticated searching.

	* src/yelp-view-content.c: 
	- use YelpURI.
	- Changed url_selected signal to uri_selected.
	(yelp_view_content_show_uri): 
	- cleaned up A LOT since this became much much easier with
	  YelpURI.
