@@ -11,6 +11,7 @@ GNOME_Yelp.h
 GNOME_Yelp.server
 gnome_yelp_idl_stamp
 test-uri
+test-reader
 yelp-marshal.c
 yelp-marshal.h
 yelp
